add package.json with commands to invoke on all sub projects; move common configs to root folder; fix build.yaml

--- a/build.yaml
+++ b/build.yaml
@@ -12,47 +12,48 @@ steps:
       inputs:
           command: custom
           customCommand: ci
-          workingDir: 'src/scanner'
-      displayName: 'install dependencies'
+      displayName: 'install root dependencies'
+
+    - task: Npm@1
+      inputs:
+          command: custom
+          customCommand: run bootstrap -- --ci
+      displayName: 'install packages dependencies'
 
     - task: Npm@1
       inputs:
           command: custom
           customCommand: run lint
-          workingDir: 'src/scanner'
       displayName: run linter
 
     - task: Npm@1
       inputs:
           command: custom
           customCommand: run format-check
-          workingDir: 'src/scanner'
       displayName: check code formatting
 
     - task: Npm@1
       inputs:
           command: custom
           customCommand: run clean
-          workingDir: 'src/scanner'
       displayName: clean
 
     - task: Npm@1
       inputs:
           command: custom
-          customCommand: run build -- --env.version=$(Build.BuildId)
-          workingDir: 'src/scanner'
+          # 1st '--' denotes args for root npm; 2nd '--' denotes args for lerna; 3rd '--' denots args for the sub project npm script
+          customCommand: run build -- -- -- --env.version=$(Build.BuildId)
       displayName: build
 
     - task: Npm@1
       inputs:
           command: custom
           customCommand: run test -- --ci
-          workingDir: 'src/scanner'
       displayName: run unit tests
 
     - task: PublishTestResults@2
       inputs:
-          testResultsFiles: $(System.DefaultWorkingDirectory)/src/scanner/test-results/unit/junit.xml
+          testResultsFiles: '**/test-results/unit/junit.xml'
           testRunTitle: unit tests
       condition: always()
       displayName: publish unit test results
@@ -60,7 +61,7 @@ steps:
     - task: PublishCodeCoverageResults@1
       inputs:
           codeCoverageTool: Cobertura
-          summaryFileLocation: $(System.DefaultWorkingDirectory)/src/scanner/test-results/unit/coverage/cobertura-coverage.xml
+          summaryFileLocation: '**/test-results/unit/coverage/cobertura-coverage.xml'
           failIfCoverageEmpty: true
       displayName: publish code coverage
 
@@ -68,8 +69,8 @@ steps:
       inputs:
           command: custom
           customCommand: run build-image
-          workingDir: 'src/scanner'
-      displayName: build docker image
+          workingDir: 'packages/scanner-function'
+      displayName: build scanner function docker image
 
     - task: Docker@1
       inputs:
