--- a/packages/scanner-function/package.json
+++ b/packages/scanner-function/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "accessibility-insights-service",
+    "name": "scanner-function",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "index.js",
@@ -10,11 +10,8 @@
         "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist",
-        "format": "npx prettier --config prettier.config.js --write \"**/*\"",
-        "format-check": "npx prettier --config prettier.config.js --check \"**/*\"",
-        "lint": "tslint -c ./tslint.json -p ./tsconfig.json",
-        "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.json --force",
-        "precheckin": "npm-run-all --serial format lint test build",
+        "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
+        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors",
         "watch:build": "npm run build -- --watch",
         "watch:test": "jest --watch --coverage false --colors",
