--- a/packages/scanner-function/tsconfig.json
+++ b/packages/scanner-function/tsconfig.json
@@ -1,18 +1,3 @@
 {
-    "compilerOptions": {
-        "target": "es2015",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noUnusedLocals": true,
-        "resolveJsonModule": true
-    },
-    "include": ["**/*.ts"],
-    "awesomeTypescriptLoaderOptions": {
-        "usePrecompiledFiles": true,
-        "useWebpackText": true
-    }
+    "extends": "../../tsconfig.base.json"
 }
