--- a/packages/scanner-function/.vscode/settings.json
+++ b/packages/scanner-function/.vscode/settings.json
@@ -2,6 +2,5 @@
     "azureFunctions.deploySubpath": "./dist",
     "azureFunctions.projectRuntime": "~2",
     "azureFunctions.projectLanguage": "JavaScript",
-    "azureFunctions.templateFilter": "Verified",
-    "tslint.configFile": "../../tslint.json"
+    "azureFunctions.templateFilter": "Verified"
 }
