--- a/packages/scanner/package.json
+++ b/packages/scanner/package.json
@@ -7,7 +7,8 @@
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
-        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force"
+        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
+        "test": "jest --coverage --colors"
     },
     "repository": {
         "type": "git",
@@ -20,12 +21,26 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
+        "@types/jest": "^24.0.5",
+        "@types/puppeteer": "^1.12.1",
+        "@types/yargs": "^12.0.9",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
+        "jest": "^24.1.0",
+        "jest-circus": "^24.1.0",
+        "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
+        "ts-jest": "^23.10.5",
         "ts-loader": "^5.3.3",
+        "typemoq": "^2.1.0",
         "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3"
+        "webpack-cli": "^3.2.3",
+        "webpack-node-externals": "^1.7.2"
+    },
+    "dependencies": {
+        "axe-puppeteer": "^1.0.0",
+        "puppeteer": "^1.12.2",
+        "yargs": "^13.2.1"
     }
 }
