--- a/packages/scanner/package.json
+++ b/packages/scanner/package.json
@@ -8,7 +8,8 @@
         "clean": "rimraf dist",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
-        "test": "jest --coverage --colors"
+        "test": "jest --coverage --colors",
+        "watch:build": "npm run build -- --watch"
     },
     "repository": {
         "type": "git",
@@ -30,13 +31,13 @@
         "jest-circus": "^24.1.0",
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
+        "raw-loader": "^1.0.0",
         "rimraf": "^2.6.3",
         "ts-jest": "^23.10.5",
         "ts-loader": "^5.3.3",
         "typemoq": "^2.1.0",
         "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3",
-        "webpack-node-externals": "^1.7.2"
+        "webpack-cli": "^3.2.3"
     },
     "dependencies": {
         "axe-puppeteer": "^1.0.0",
