adding common package to interact with azure

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,9 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noUnusedLocals": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "sourceMap": true,
+        "declaration": true
     },
     "awesomeTypescriptLoaderOptions": {
         "usePrecompiledFiles": true,
