--- a/packages/azure-client/package.json
+++ b/packages/azure-client/package.json
@@ -1,15 +1,17 @@
 {
-    "name": "scanner",
+    "name": "azure-client",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
+        "build": "tsc && echo",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
-        "test": "jest --coverage --colors"
+        "test": "jest --coverage --colors",
+        "watch:build": "npm run build -- -w"
     },
+    "main": "dist/index.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
@@ -19,32 +21,19 @@
     "bugs": {
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
-    "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/scanner#readme",
+    "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/azure-client#readme",
+    "dependencies": {
+        "@azure/cosmos": "^2.1.2"
+    },
     "devDependencies": {
-        "@types/jest": "^24.0.5",
-        "@types/puppeteer": "^1.12.1",
-        "@types/yargs": "^12.0.9",
-        "copy-webpack-plugin": "^4.6.0",
-        "fork-ts-checker-webpack-plugin": "^0.5.2",
+        "@types/jest": "^24.0.6",
+        "@types/node": "^11.9.4",
         "jest": "^24.1.0",
         "jest-circus": "^24.1.0",
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
-        "ts-jest": "^23.10.5",
-        "ts-loader": "^5.3.3",
-        "typemoq": "^2.1.0",
-        "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3",
-        "webpack-node-externals": "^1.7.2"
-    },
-    "dependencies": {
-        "@azure/cosmos": "^2.1.2",
-        "@types/sha.js": "^2.4.0",
-        "axe-puppeteer": "^1.0.0",
-        "azure-client": "^1.0.0",
-        "puppeteer": "^1.12.2",
-        "sha.js": "^2.4.11",
-        "yargs": "^13.2.1"
+        "ts-jest": "^24.0.0",
+        "typemoq": "^2.1.0"
     }
 }
