adding yargs dependency

--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -41,6 +41,7 @@
     },
     "dependencies": {
         "redis": "^2.8.0",
-        "headless-chrome-crawler": "^1.8.0"
+        "headless-chrome-crawler": "^1.8.0",
+        "yargs": "^13.2.1"
     }
 }
