--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -49,6 +49,7 @@
         "dotenv": "^6.2.0",
         "headless-chrome-crawler": "^1.8.0",
         "inversify": "^5.0.1",
+        "inversify-binding-decorators": "^4.0.0",
         "lodash": "^4.17.11",
         "puppeteer": "^1.12.2",
         "reflect-metadata": "^0.1.13",
