--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -29,6 +29,8 @@
         "@types/lodash": "^4.14.123",
         "@types/sha.js": "^2.4.0",
         "@types/verror": "^1.10.3",
+        "@types/inversify": "^2.0.33",
+        "@types/inversify-binding-decorators": "^2.0.0",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
         "jest": "^24.1.0",
@@ -50,7 +52,6 @@
         "headless-chrome-crawler": "^1.8.0",
         "inversify": "^5.0.1",
         "inversify-binding-decorators": "^4.0.0",
-        "lodash": "^4.17.11",
         "puppeteer": "^1.12.2",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
