--- a/packages/runner/.vscode/launch.json
+++ b/packages/runner/.vscode/launch.json
@@ -30,7 +30,7 @@
                 "--inspect-brk",
                 "${workspaceRoot}/node_modules/jest/bin/jest.js",
                 "--runInBand",
-                "${relativeFile}",
+                "${fileBasename}",
                 "--coverage",
                 "false"
             ],
