--- a/packages/azure-client/package.json
+++ b/packages/azure-client/package.json
@@ -26,14 +26,17 @@
         "@azure/cosmos": "^2.1.2"
     },
     "devDependencies": {
-        "@types/jest": "^24.0.6",
+        "@types/jest": "^24.0.11",
         "@types/node": "^11.9.4",
-        "jest": "^24.1.0",
-        "jest-circus": "^24.1.0",
+        "jest": "^24.7.1",
+        "jest-circus": "^24.7.1",
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.0",
-        "typemoq": "^2.1.0"
+        "tslint": "5.12.1",
+        "tslint-microsoft-contrib": "6.0.0",
+        "typemoq": "^2.1.0",
+        "typescript": "^3.4.3"
     }
 }
