--- a/packages/job-manager/package.json
+++ b/packages/job-manager/package.json
@@ -22,21 +22,23 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
         "@types/dotenv": "^6.1.0",
-        "@types/jest": "^24.0.6",
+        "@types/jest": "^24.0.11",
         "@types/lodash": "^4.14.122",
         "@types/node": "^11.9.4",
         "@types/verror": "^1.10.3",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
-        "jest": "^24.1.0",
-        "jest-circus": "^24.1.0",
+        "jest": "^24.7.1",
+        "jest-circus": "^24.7.1",
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.0",
         "ts-loader": "^5.3.3",
+        "tslint": "5.12.1",
+        "tslint-microsoft-contrib": "6.0.0",
         "typemoq": "^2.1.0",
-        "typescript": "^3.3.3",
+        "typescript": "^3.4.3",
         "webpack": "^4.29.4",
         "webpack-cli": "^3.2.3",
         "webpack-node-externals": "^1.7.2"
