--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -24,7 +24,7 @@
         "@types/dotenv": "^6.1.0",
         "@types/inversify": "^2.0.33",
         "@types/inversify-binding-decorators": "^2.0.0",
-        "@types/jest": "^24.0.5",
+        "@types/jest": "^24.0.11",
         "@types/lodash": "^4.14.123",
         "@types/node": "^11.9.4",
         "@types/puppeteer": "^1.12.1",
@@ -33,14 +33,17 @@
         "@types/yargs": "^12.0.9",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
-        "jest": "^24.5.0",
-        "jest-circus": "^24.1.0",
+        "jest": "^24.7.1",
+        "jest-circus": "^24.7.1",
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.0",
         "ts-loader": "^5.3.3",
+        "tslint": "5.12.1",
+        "tslint-microsoft-contrib": "6.0.0",
         "typemoq": "^2.1.0",
+        "typescript": "^3.4.3",
         "webpack": "^4.29.4",
         "webpack-cli": "^3.2.3",
         "webpack-node-externals": "^1.7.2"
