--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -21,32 +21,35 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/scan-request-sender#readme",
     "devDependencies": {
-        "@types/jest": "^24.0.5",
+        "@types/jest": "^24.0.11",
         "@types/puppeteer": "^1.12.1",
-        "@types/yargs": "^12.0.9",
         "@types/verror": "^1.10.3",
+        "@types/yargs": "^12.0.9",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
-        "jest": "^24.1.0",
-        "jest-circus": "^24.1.0",
+        "jest": "^24.7.1",
+        "jest-circus": "^24.7.1",
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^23.10.5",
         "ts-loader": "^5.3.3",
+        "tslint": "5.12.1",
+        "tslint-microsoft-contrib": "6.0.0",
         "typemoq": "^2.1.0",
+        "typescript": "^3.4.3",
         "webpack": "^4.29.4",
         "webpack-cli": "^3.2.3",
         "webpack-node-externals": "^1.7.2"
     },
     "dependencies": {
-        "azure-storage": "^2.10.2",
         "@azure/cosmos": "^2.1.2",
         "@types/sha.js": "^2.4.0",
         "axis-storage": "^1.0.0",
+        "azure-storage": "^2.10.2",
+        "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "inversify-binding-decorators": "^4.0.0",
-        "reflect-metadata": "^0.1.13",
-        "dotenv": "^6.2.0"
+        "reflect-metadata": "^0.1.13"
     }
 }
