--- a/packages/tools/json-compressor/package.json
+++ b/packages/tools/json-compressor/package.json
@@ -14,6 +14,8 @@
     },
     "devDependencies": {
         "@types/node": "^11.11.5",
-        "@types/yargs": "^12.0.10"
+        "@types/yargs": "^12.0.10",
+        "tslint": "5.12.1",
+        "tslint-microsoft-contrib": "6.0.0"
     }
 }
