--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
-    "packages": ["packages/*", "packages/tools/*"],
-    "version": "0.0.0"
+    "version": "0.0.0",
+    "npmClient": "yarn",
+    "useWorkspaces": true,
+    "packages": [
+        "packages/*",
+        "packages/tools/*"
+    ]
 }
