--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
         "tslint": "^5.12.1",
         "tslint-microsoft-contrib": "^6.0.0",
         "typescript": "^3.3.3"
+    },
+    "workspaces": {
+        "packages": [
+            "packages/*",
+            "packages/tools/*"
+        ]
     }
 }
