--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -50,6 +50,7 @@
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "inversify-binding-decorators": "^4.0.0",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "verror": "^1.10.0"
     }
 }
