--- a/packages/axis-storage/package.json
+++ b/packages/axis-storage/package.json
@@ -53,6 +53,8 @@
         "inversify": "^5.0.1",
         "inversify-binding-decorators": "^4.0.0",
         "lodash": "^4.17.11",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "sha.js": "^2.4.11",
+        "verror": "^1.10.0"
     }
 }
