Using yarn to manage dependencies (#62)
* upgrade lerna

* Add yarn to handle workspace dependencies

* fixing webpack config to look up for modules under root

* formatting

* upgrade ts-jest

* using yarn.lock file inside scanner function image

* using yarn in build pipeline

* fix build failure

* enable no-implicit-dependencies tslint rule

* remove package-lock.json

* fix debug current file launch task

* fixing build failure

* update readme file to use yarn

--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -50,6 +50,7 @@
     },
     "dependencies": {
         "@azure/cosmos": "^2.1.2",
+        "axe-core": "3.2.2",
         "axe-puppeteer": "^1.0.0",
         "dotenv": "^6.2.0",
         "headless-chrome-crawler": "^1.8.0",
@@ -58,6 +59,7 @@
         "puppeteer": "^1.12.2",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
+        "verror": "^1.10.0",
         "yargs": "^13.2.1"
     }
 }
