--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
     "devDependencies": {
-        "lerna": "^3.13.0",
+        "lerna": "^3.13.3",
         "npm-run-all": "^4.1.5",
         "prettier": "1.16.4",
         "tslint": "^5.12.1",
         "tslint-microsoft-contrib": "^6.0.0",
         "typescript": "^3.3.3"
+    },
+    "workspaces": {
+        "packages": [
+            "packages/*",
+            "packages/tools/*"
+        ]
     }
 }
