--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -32,7 +32,7 @@
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
-        "ts-jest": "^23.10.5",
+        "ts-jest": "^24.0.2",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
@@ -50,6 +50,7 @@
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "inversify-binding-decorators": "^4.0.0",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "verror": "^1.10.0"
     }
 }
