--- a/packages/scanner-function/package.json
+++ b/packages/scanner-function/package.json
@@ -46,7 +46,7 @@
         "prettier": "1.16.1",
         "rimraf": "^2.6.3",
         "shelljs": "^0.8.3",
-        "ts-jest": "^23.10.5",
+        "ts-jest": "^24.0.2",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
@@ -59,6 +59,7 @@
     "dependencies": {
         "@types/sha.js": "^2.4.0",
         "applicationinsights": "^1.1.0",
+        "axe-core": "3.2.2",
         "axe-puppeteer": "^1.0.0",
         "puppeteer": "^1.12.2",
         "sha.js": "^2.4.11",
