--- a/packages/scanner/package.json
+++ b/packages/scanner/package.json
@@ -31,7 +31,7 @@
         "jest-junit": "^6.3.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
-        "ts-jest": "^23.10.5",
+        "ts-jest": "^24.0.2",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
@@ -44,6 +44,7 @@
     "dependencies": {
         "@azure/cosmos": "^2.1.2",
         "@types/sha.js": "^2.4.0",
+        "axe-core": "3.2.2",
         "axe-puppeteer": "^1.0.0",
         "azure-client": "^1.0.0",
         "puppeteer": "^1.12.2",
