--- a/packages/job-manager/package.json
+++ b/packages/job-manager/package.json
@@ -44,11 +44,14 @@
         "webpack-node-externals": "^1.7.2"
     },
     "dependencies": {
+        "axis-storage": "1.0.0",
         "azure-batch": "^6.0.0",
         "azure-storage": "^2.10.2",
+        "inversify": "^5.0.1",
         "dotenv": "^6.2.0",
         "lodash": "^4.17.11",
         "moment": "^2.22.2",
+        "reflect-metadata": "^0.1.13",
         "verror": "^1.10.0"
     }
 }
