--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -25,7 +25,8 @@
         "applicationinsights": "^1.3.1",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "verror": "^1.10.0"
     },
     "devDependencies": {
         "@types/jest": "^24.0.11",
