--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -2,7 +2,7 @@
     "name": "logger",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
-    "main": "index.js",
+    "main": "dist/index.js",
     "scripts": {
         "build": "tsc && echo",
         "cbuild": "npm-run-all --serial clean build",
@@ -23,15 +23,18 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "dependencies": {
         "applicationinsights": "^1.3.1",
+        "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
         "reflect-metadata": "^0.1.13",
         "verror": "^1.10.0"
     },
     "devDependencies": {
+        "@types/dotenv": "^6.1.0",
         "@types/jest": "^24.0.11",
         "@types/lodash": "^4.14.123",
         "@types/node": "^11.13.4",
+        "@types/yargs": "^12.0.9",
         "jest": "^24.7.1",
         "jest-circus": "^24.7.1",
         "jest-junit": "^6.3.0",
@@ -40,6 +43,7 @@
         "tslint": "^5.12.1",
         "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
-        "typescript": "^3.4.3"
+        "typescript": "^3.4.3",
+        "yargs": "^13.2.1"
     }
 }
