--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -54,6 +54,7 @@
         "dotenv": "^6.2.0",
         "headless-chrome-crawler": "^1.8.0",
         "inversify": "^5.0.1",
+        "logger": "1.0.0",
         "puppeteer": "^1.12.2",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
