--- a/packages/job-manager/package.json
+++ b/packages/job-manager/package.json
@@ -48,6 +48,7 @@
         "azure-batch": "^6.0.0",
         "azure-storage": "^2.10.2",
         "inversify": "^5.0.1",
+        "logger": "1.0.0",
         "dotenv": "^6.2.0",
         "lodash": "^4.17.11",
         "moment": "^2.22.2",
