--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -47,6 +47,7 @@
         "@types/sha.js": "^2.4.0",
         "axis-storage": "^1.0.0",
         "azure-storage": "^2.10.2",
+        "logger": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "reflect-metadata": "^0.1.13",
