--- a/packages/axis-storage/package.json
+++ b/packages/axis-storage/package.json
@@ -50,6 +50,7 @@
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
+        "logger": "1.0.0",
         "pretty-format": "^24.7.0",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
