--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -39,8 +39,7 @@
         "typemoq": "^2.1.0",
         "typescript": "^3.4.3",
         "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3",
-        "webpack-node-externals": "^1.7.2"
+        "webpack-cli": "^3.2.3"
     },
     "dependencies": {
         "@azure/cosmos": "^2.1.2",
