--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -39,14 +39,14 @@
         "typemoq": "^2.1.0",
         "typescript": "^3.4.3",
         "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3",
-        "webpack-node-externals": "^1.7.2"
+        "webpack-cli": "^3.2.3"
     },
     "dependencies": {
         "@azure/cosmos": "^2.1.2",
         "@types/sha.js": "^2.4.0",
         "axis-storage": "^1.0.0",
         "azure-storage": "^2.10.2",
+        "logger": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "reflect-metadata": "^0.1.13",
