--- a/packages/tools/json-compressor/tsconfig.json
+++ b/packages/tools/json-compressor/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "../../../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "out"
+        "outDir": "dist"
     }
 }
