Changes to get the pool startup working

--- a/packages/job-manager/config/.env.az-batch-task-parameter.template.json
+++ b/packages/job-manager/config/.env.az-batch-task-parameter.template.json
@@ -1,27 +1,27 @@
 {
-    "resourceFiles": [
-        {
-            "httpUrl": ""
-            "filePath": "package-lock.json"
-        },
-        {
-            "httpUrl": "",
-            "filePath": "package.json"
-        },
-        {
-            "httpUrl": "",
-            "filePath": "scan-url.js"
-        }
-    ],
-    "environmentSettings": [
-        {
-            "name": "AZURE_COSMOS_DB_URL",
-            "value": ""
-        },
-        {
-            "name": "AZURE_COSMOS_DB_KEY",
-            "value": ""
-        }
-    ],
-    "commandLineTemplate": "/bin/bash -c 'npm ci --production && nodejs scan-url.js --id=\"%id%\" --name=\"%name%\" --baseUrl=\"%baseUrl%\" --scanUrl=\"%scanUrl%\" --serviceTreeId=\"%serviceTreeId%\"'"
+   "resourceFiles":[
+      {
+         "httpUrl":"",
+         "filePath":"runner.js"
+      },
+      {
+         "httpUrl":"",
+         "filePath":"start-runner.sh"
+      }
+   ],
+   "environmentSettings":[
+      {
+         "name":"APPINSIGHTS_INSTRUMENTATIONKEY",
+         "value":""
+      },
+      {
+         "name":"AZURE_COSMOS_DB_URL",
+         "value":""
+      },
+      {
+         "name":"AZURE_COSMOS_DB_KEY",
+         "value":""
+      }
+   ],
+   "commandLineTemplate":"/bin/bash -c 'start-runner.sh \"%id%\" \"%name%\" \"%baseUrl%\" \"%scanUrl%\" \"%serviceTreeId%\"'"
 }
