--- a/packages/resource-deployment/app-insights/app-insights.template.json
+++ b/packages/resource-deployment/app-insights/app-insights.template.json
@@ -3,7 +3,7 @@
     "contentVersion": "1.0.0.0",
     "parameters": {
         "appInsightsName": {
-            "defaultValue": "axisAppInsights",
+            "defaultValue": "[concat('allyInsight',toLower(uniqueString(resourceGroup().id)))]",
             "type": "string"
         },
         "location": {
