adding keyvault client

--- a/packages/axis-storage/package.json
+++ b/packages/axis-storage/package.json
@@ -45,11 +45,13 @@
     "dependencies": {
         "@azure/cosmos": "^2.1.2",
         "@types/sha.js": "^2.4.0",
+        "azure-keyvault": "^3.0.4",
         "azure-storage": "^2.10.2",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
         "logger": "1.0.0",
+        "ms-rest-azure": "^2.6.0",
         "pretty-format": "^24.7.0",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
