--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc && echo",
         "cbuild": "npm-run-all --serial clean build",
-        "clean": "rimraf dist",
+        "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors"
