--- a/packages/scanner-function/package.json
+++ b/packages/scanner-function/package.json
@@ -9,7 +9,7 @@
         "deploy-prod": "node /deploy-function-to-prod.js",
         "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
-        "clean": "rimraf dist",
+        "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors",
