--- a/packages/resource-deployment/.env.template
+++ b/packages/resource-deployment/.env.template
@@ -2,10 +2,9 @@ AZ_BATCH_ACCOUNT_NAME=
 AZ_BATCH_ACCOUNT_URL=
 AZ_BATCH_POOL_ID=
 AZ_BATCH_JOB_ID=
-AZ_BATCH_ACCOUNT_KEY=
 
-AZURE_STORAGE_ACCOUNT=
-AZURE_STORAGE_ACCESS_KEY=
+KEY_VAULT_URL=
+
 AZURE_STORAGE_SCAN_QUEUE=
 
 AZ_BATCH_TASK_PARAMETER=
