--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,5 @@
     "version": "0.0.0",
     "npmClient": "yarn",
     "useWorkspaces": true,
-    "packages": ["packages/*", "packages/tools/*"]
+    "packages": ["packages/*"]
 }
