--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     },
     "workspaces": {
         "packages": [
-            "packages/*",
-            "packages/tools/*"
+            "packages/*"
         ]
     }
 }
